<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <include
        android:id="@+id/inc" 
        layout="@layout/home_title" />

        <RelativeLayout
            android:id="@+id/re01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff" >

            <android.support.v4.view.ViewPager
                android:id="@+id/home_viewpager"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <LinearLayout
                android:id="@+id/spots"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/home_viewpager"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="18dp"
                android:gravity="center"
                android:orientation="horizontal" >
            </LinearLayout>

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/home_viewpager"
                android:layout_marginTop="20dp"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/air"
                    style="@style/UMyLifeStyle"
                    android:checked="true"
                    android:drawableTop="@drawable/air_con_clean"
                    android:text="@string/air_clean"
                    android:textColor="@color/text_color" />

                <RadioButton
                    android:id="@+id/wash"
                    style="@style/UMyLifeStyle"
                    android:drawableTop="@drawable/washing_clean"
                    android:text="@string/wash_clean"
                    android:textColor="@color/text_color" />

                <RadioButton
                    android:id="@+id/lamp"
                    style="@style/UMyLifeStyle"
                    android:drawableTop="@drawable/lampblack_presser"
                    android:text="@string/lamp_clean"
                    android:textColor="@color/text_color" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/radioGroup2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/radioGroup1"
                android:layout_marginTop="20dp"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/hour_clean"
                    style="@style/UMyLifeStyle"
                    android:checked="true"
                    android:drawableTop="@drawable/hour_clean"
                    android:text="@string/hour_clean"
                    android:textColor="@color/text_color" />

                <RadioButton
                    android:id="@+id/plum"
                    style="@style/UMyLifeStyle"
                    android:drawableTop="@drawable/plumbing"
                    android:text="@string/plumbing"
                    android:textColor="@color/text_color" />

                <RadioButton
                    android:id="@+id/more"
                    style="@style/UMyLifeStyle"
                    android:drawableTop="@drawable/more"
                    android:text="@string/more"
                    android:textColor="@color/text_color" />
            </RadioGroup>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/man1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/man1" />

            <ImageView
                android:id="@+id/man2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/man2" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>